# betstamp-ai-odds-agent

./: .gitignore  AGENTS.md  CLAUDE.md  DEVLOG.md  README.md  docker-compose.yml  sample_upload.json
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agent/: odds_agent.py  prompts.py
backend/app/agent/tools/: __init__.py  analysis_tools.py  data_tools.py  detection_tools.py  math_tools.py  trace.py
backend/app/api/: briefing.py  chat.py  data.py
backend/app/data/: __init__.py  sample_odds_data_alt.json  store.py
backend/app/eval/: evaluator.py
backend/app/models/: briefing.py
backend/app/tools/: analysis_tools.py  detection_tools.py  math_utils.py
backend/tests/: test_analysis.py  test_api.py  test_data_store.py  test_detection.py  test_edge_cases.py  test_eval.py  test_math.py  test_models.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: BriefingDisplay.tsx  ChatInterface.tsx  ToolCallTrace.tsx
frontend/src/lib/: api.ts  tools.ts
